# Leetcode-I-O-Helper

./: CMakeLists.txt  README.md  example.cpp
.github/workflows/: cmake-multi-platform.yml
examples/: bool.cpp  char.cpp  example1.cpp  example2.cpp  example3.cpp
examples/cpp/: example1.cpp  example4.cpp
examples/output/: example2
includes/process/: cpp.hpp  process.hpp
includes/utils/: file_io.hpp  selection.hpp  str_utils.hpp
scripts/: linux.sh  windows.bat
src/: main.cpp
src/process/: cpp.cpp  process.cpp
src/utils/: file_io.cpp  str_utils.cpp
